fix: gap between search results and nav

--- a/frontend/src/components/Guide/Menu.module.scss
+++ b/frontend/src/components/Guide/Menu.module.scss
@@ -15,7 +15,6 @@
     display: block;
     height: 8px;
     background: var(--color-bg-secondary);
-    background: red;
     position: absolute;
     bottom: 100%;
     right: 0;
