--- a/frontend/src/components/SuggestionsProfile/SuggestionsProfile.module.scss
+++ b/frontend/src/components/SuggestionsProfile/SuggestionsProfile.module.scss
@@ -1,18 +1,30 @@
 .wrapper {
   position: absolute;
-  top: 110%;
+  top: calc(100% + 0.8em); // 0.8 = pading nav + padding button
   left: 0;
   right: 0;
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
-  overflow: hidden;
+  border-radius: 0 0 5px 5px;
   box-shadow: 0 0 5px var(--color-shadow);
   padding: 1em 0;
   background: var(--color-bg-secondary);
   white-space: nowrap;
   font-size: 0.9em;
   gap: 0.2em;
+
+  // hides top shadow by standing on top of it
+  &::after {
+    content: '';
+    display: block;
+    height: 8px;
+    background: var(--color-bg-secondary);
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    left: 0;
+    z-index: 300;
+  }
 }
 
 .link {
